--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,136 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
+  @tailwind components;
+  @tailwind utilities;
+
+  body,
+  :root{
+    max-height: 100%;
+    overflow: hidden;
+  }
+  @layer base {
+    :root {
+      --background: 0 0% 100%;
+      --foreground: 222.2 84% 4.9%;
+
+      --card: 0 0% 100%;
+      --card-foreground: 222.2 84% 4.9%;
+
+      --popover: 0 0% 100%;
+      --popover-foreground: 222.2 84% 4.9%;
+
+      --primary: 222.2 47.4% 11.2%;
+      --primary-foreground: 210 40% 98%;
+
+      --secondary: 210 40% 96.1%;
+      --secondary-foreground: 222.2 47.4% 11.2%;
+
+      --muted: 210 40% 96.1%;
+      --muted-foreground: 215.4 16.3% 46.9%;
+
+      --accent: 210 40% 96.1%;
+      --accent-foreground: 222.2 47.4% 11.2%;
+
+      --destructive: 0 84.2% 60.2%;
+      --destructive-foreground: 210 40% 98%;
+
+      --border: 214.3 31.8% 91.4%;
+      --input: 214.3 31.8% 91.4%;
+      --ring: 222.2 84% 4.9%;
+
+      --radius: 0.5rem;
+    }
+
+    .dark {
+      --background: 222.2 84% 4.9%;
+      --foreground: 210 40% 98%;
+
+      --card: 222.2 84% 4.9%;
+      --card-foreground: 210 40% 98%;
+
+      --popover: 222.2 84% 4.9%;
+      --popover-foreground: 210 40% 98%;
+
+      --primary: 210 40% 98%;
+      --primary-foreground: 222.2 47.4% 11.2%;
+
+      --secondary: 217.2 32.6% 17.5%;
+      --secondary-foreground: 210 40% 98%;
+
+      --muted: 217.2 32.6% 17.5%;
+      --muted-foreground: 215 20.2% 65.1%;
+
+      --accent: 217.2 32.6% 17.5%;
+      --accent-foreground: 210 40% 98%;
+
+      --destructive: 0 62.8% 30.6%;
+      --destructive-foreground: 210 40% 98%;
+
+      --border: 217.2 32.6% 17.5%;
+      --input: 217.2 32.6% 17.5%;
+      --ring: 212.7 26.8% 83.9%;
+    }
+
+    /* Hide scrollbar for modern browsers */
+    .scrollbar-hide::-webkit-scrollbar {
+      display: none;
+    }
+
+    .scrollbar-hide {
+      -ms-overflow-style: none;  /* Internet Explorer 10+ */
+      scrollbar-width: none;  /* Firefox */
+    }
+
+
+    .incoming-bubble {
+      position: relative;
+      /* background-color: #e1ffc7; */
+  }
+  
+  .outgoing-bubble {
+      position: relative;
+      /* background-color: #dcf8c6; */
+  }
+  
+  /* Triangle pointer for incoming messages (left side) */
+  .incoming-bubble::before {
+      content: '';
+      position: absolute;
+      top: -4px; /* Adjust the position to align with the bubble */
+      left: -17px; /* Puts the triangle on the left side */
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 10px;
+      transform: rotate(-90deg);
+      --tw-bg-opacity: 1;
+      border-color: transparent rgb(55 65 81 / var(--tw-bg-opacity)) transparent transparent; /* Color matches the bubble */
+  }
+  
+  /* Triangle pointer for outgoing messages (right side) */
+  .outgoing-bubble::before {
+      content: '';
+      position: absolute;
+      top:-4px; /* Adjust the position to align with the bubble */
+      right: -66px; /* Puts the triangle on the right side */
+      width: 0;
+      height: 0;
+      transform: rotate(90deg);
+      border-style: solid;
+      border-width: 10px 10px 10px 10px;
+      --tw-bg-opacity: 1;
+      border-color: transparent transparent transparent rgb(55 65 81 / var(--tw-bg-opacity)); /* Color matches the bubble */
+  }
+    
+  }
+
+  @layer base {
+    * {
+      @apply border-border;
+    }
+    body {
+      @apply bg-background text-foreground;
+    }
+  }
+
+
+  
